--- a/GameTracking/GameTracking/MainWindow.xaml
+++ b/GameTracking/GameTracking/MainWindow.xaml
@@ -1,24 +1,57 @@
 ﻿<Window x:Class="GameTracking.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:local="clr-namespace:GameTracking"
 		xmlns:gong="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="640" Width="900">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
         <ListView ItemsSource="{Binding Games}"
                   gong:DragDrop.IsDropTarget="True"
-                  gong:DragDrop.DropHandler="{Binding}">
+                  gong:DragDrop.DropHandler="{Binding}"
+                  Grid.ColumnSpan="2">
             <ListView.View>
                 <GridView>
+                    <GridViewColumn Header="Publish">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate DataType="{x:Type local:GameToSell}">
+                                <CheckBox IsChecked="{Binding Publish}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                     <GridViewColumn Header="Platform" DisplayMemberBinding="{Binding Platform}" />
-                    <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" />
+                    <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="300"/>
                     <GridViewColumn Header="UPC" DisplayMemberBinding="{Binding Upc}" />
+                    <GridViewColumn Header="Price" DisplayMemberBinding="{Binding Price}" Width="100"/>
+                    <GridViewColumn Header="Images">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <ItemsControl ItemsSource="{Binding PicturePaths}">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <Image Source="{Binding}" MaxHeight="64"/>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                    <ItemsControl.ItemsPanel>
+                                        <ItemsPanelTemplate>
+                                            <UniformGrid Width="288" Height="128" Rows="2" Columns="4"/>
+                                        </ItemsPanelTemplate>
+                                    </ItemsControl.ItemsPanel>
+                                </ItemsControl>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
-        <Button Grid.Row="1" Click="Button_Click">Google!</Button>
+        <Button Grid.Row="1" Grid.Column="0" Click="Import_Click">Import!</Button>
+        <Button Grid.Row="1" Grid.Column="1" Click="Publish_Click">Publish!</Button>
     </Grid>
 </Window>
