--- a/GameTracking/GameTracking/Processed.xaml
+++ b/GameTracking/GameTracking/Processed.xaml
@@ -22,7 +22,7 @@
                 <GridView>
                     <GridViewColumn Header="" Width="30">
                         <GridViewColumn.CellTemplate>
-                            <DataTemplate DataType="{x:Type local:ListedGame}">
+                            <DataTemplate DataType="{x:Type local:GameToSell}">
                                 <CheckBox IsChecked="{Binding Publish}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
@@ -102,33 +102,6 @@
                     <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="250"/>
                     <GridViewColumn Header="Price" DisplayMemberBinding="{Binding Price}" Width="50"/>
                     <GridViewColumn Header="Condition" DisplayMemberBinding="{Binding Condition}" Width="100"/>
-                    <GridViewColumn Header="Shipping" Width="100">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <ComboBox ItemsSource="{Binding ShippingMethods}" SelectedValue="{Binding Shipping}" />
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-
-                    <GridViewColumn Header="Images">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <ItemsControl ItemsSource="{Binding PicturePaths}">
-                                    <ItemsControl.ItemTemplate>
-                                        <DataTemplate>
-                                            <Image Source="{Binding}" MaxHeight="64"/>
-                                        </DataTemplate>
-                                    </ItemsControl.ItemTemplate>
-                                    <ItemsControl.ItemsPanel>
-                                        <ItemsPanelTemplate>
-                                            <UniformGrid Width="576" Height="64" Rows="1" Columns="12"/>
-                                        </ItemsPanelTemplate>
-                                    </ItemsControl.ItemsPanel>
-                                </ItemsControl>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn Header="UPC" DisplayMemberBinding="{Binding Upc}" />
                 </GridView>
             </ListView.View>
         </ListView>
