--- a/GameTracking/GameTracking/ToProcess.xaml
+++ b/GameTracking/GameTracking/ToProcess.xaml
@@ -20,7 +20,7 @@
                 <GridView>
                     <GridViewColumn Header="" Width="30">
                         <GridViewColumn.CellTemplate>
-                            <DataTemplate DataType="{x:Type local:ListedGame}">
+                            <DataTemplate DataType="{x:Type local:GameToSell}">
                                 <CheckBox IsChecked="{Binding Publish}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
